--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-24  Michael Matz  <matz@ifh.de>
+
+	* ltcf-cxx.sh: Allow CC to have arguments.
+
 2000-07-24  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>, David Kaelbling  <drk@orchietta.hudson.sgi.com>
 
 	* ltmain.in (irix, major): Prepend a `.'.
