--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* ltmain.in (shtool): Use echo|grep instead of expr, as in the
+	original patch.
+
 2000-07-26  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 	
 	Merge from development tree:
