--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-26  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltconfig.in (old_reload_flag): typo.
+
 2000-08-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltmain.in (shtool): Use echo|grep instead of expr, as in the
