--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-31  Gary V. Vaughan  <gvv@techie.com>
+
+	sh.test was failing unnecessarily.
+
+	* ltmain.in: Xsed is overkill on $CC, and removing it prevents
+	the test suite from failing.
+
 2000-08-31  Ossama Othman  <ossama@debian.org>
 
 	* ltcf-c.sh, ltcf-cxx.sh, ltcf-gcj.sh: Removed RCD ID tags.  They
