--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-02  Assar Westerlund  <assar@sics.se>
+
+	* ltconfig.in: Add back ranlib calls for static libraries if there
+	is a ranlib.
+
 2000-08-31  Gary V. Vaughan  <gvv@techie.com>
 
 	Move the echo detection code to a macro in libtool.m4.  The code
