--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-02  Pavel Roskin <proski@gnu.org>
+
+	* ltconfig.in: only load $cache_file if it's a regular file
+
 2000-08-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* ltmain.in (shtool): Use echo|grep instead of expr, as in the
