--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-02  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltdl.m4: Oops, I had forgotten to commit this part of Syd Polk's
+	patch from 2000-06-17.
+
 2000-09-02  Tom Kacvinsky  <tjk@ams.org>, Tim Mooney <mooney@dogbert.cc.ndsu.NoDak.edu>
 
 	* libtool.m4: Ignore Tru64's nm's complaint.
