--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-02  Makoto Ishisone  <ishisone@sra.co.jp>
+
+	* libtool.m4 (lt_cv_deplibs_check_method, freebsd): Fix typo,
+	add support for compact format library.
+
 2000-09-02  Nick Hudson  <nick@nthcliff.demon.co.uk>
 
 	* configure.in: AC_SUBST reload_flag, deplibs_check_method
