--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-02  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tests/link-2.test: Create hell.lo in the format expected by
+	libtool.
+
 	* ltcf-c.sh, ltcf-cxx.sh, ltcf-gcj.sh (archive_cmds,
 	archive_expsym_cmds) : Use compiler_flags instead of linker flags
 	when $CC is used for linking.
