--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-02  Alexandre Oliva  <aoliva@redhat.com>
 
+	* demo/Makefile.am: Don't extract configuration variables directly
+	from the libtool script, since it breaks with multiple
+	configurations.  Use $(LIBTOOL) --config instead.
+
 	* tests/link-2.test: Create hell.lo in the format expected by
 	libtool.
 
