--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tests/quote.test: Move the match test out of case statements, to
+	work around bug in /bin/sh of several OSs.
+
 	* ltmain.in (variables_saved_for_relink): Attempt to unset them
 	instead of setting them to an empty string.
 
