--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* libtool.m4 (AM_PROG_GCJ): Removed.
+	(LT_AC_PROG_GCJ): Use AC_CHECK_TOOL.  Set GCJ to `no' if not
+	found.
+	* configure.in: Use LT_AC_PROG_GCJ.
+	Reported by Nick Hudson <nick@nthcliff.demon.co.uk>
+
 	* tests/quote.test: Move the match test out of case statements, to
 	work around bug in /bin/sh of several OSs.
 
