--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltconfig.in (enable_dlopen): Set to no when lt_cv_dlopen is no.
+
 	* libtool.m4 (AM_PROG_GCJ): Removed.
 	(LT_AC_PROG_GCJ): Use AC_CHECK_TOOL.  Set GCJ to `no' if not
 	found.
