--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltconfig.in (enable_dlopen): Set to no when lt_cv_dlopen is no.
+
 	* libtool.m4: Don't quote CONFIG_SHELL nor ORIGINAL_CONFIG_SHELL.
 	Quote $@ properly so that the shell expands it, not m4.
 
