--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltmain.in (newdlprefiles): Use dlname if it's available and
+	old_library isn't; use linklib only if dlname is not available.
+
 	* ltconfig.in (enable_dlopen): Set to no when lt_cv_dlopen is no.
 
 	* libtool.m4: Don't quote CONFIG_SHELL nor ORIGINAL_CONFIG_SHELL.
