--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tests/mdemo-exec.test: Modify failure message.
+
 	* ltmain.in (newdlprefiles): Use dlname if it's available and
 	old_library isn't; use linklib only if dlname is not available.
 
