--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* libltdl/configure.in (HAVE_LIBDL): Look for dlopen in -lsvld.
+	* ltconfig.in: Likewise.
+
 	* tests/mdemo-exec.test: Modify failure message.
 
 	* ltmain.in (dlprefiles): Use dlname if it's available and
