--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* libltdl/ltdl.c (lt_dlopen): Set dlname from library_names if
+	dlname is empty.
+
 	* ltdl.m4 (HAVE_LIBDL): Look for dlopen in -lsvld.
 	* ltconfig.in: Likewise.
 
