--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* libtool.m4: Fix typo I introduced in yesterday's patch.
+	
 	* libltdl/ltdl.c (lt_dlopen): Set dlname from library_names if
 	dlname is empty.
 
