--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltconfig.in: Get rid of hardcode_into_libs=all; use
+	hardcode_into_libs=yes && shlibpath_overrides_runpath!=yes
+	instead.
+	[FreeBSD 3.[01]] (shlibpath_overrides_runpath): Set to no.
+	* ltmain.in: Likewise.
+	* tests/build-relink.test, tests/build-relink2.test: Adjust.
+
 	* libtool.m4: Fix typo I introduced in yesterday's patch.
 	
 	* libltdl/ltdl.c (lt_dlopen): Set dlname from library_names if
