--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltconfig.in [FreeBSD 3.[01]] (shlibpath_overrides_runpath): Set
+	to no.
+
 	* libtool.m4: Fix typo I introduced in yesterday's patch.
 	
 	* libltdl/ltdl.c (lt_dlopen): Set dlname from library_names if
