--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-04  Alexandre Oliva  <aoliva@redhat.com>
+
+	* mdemo/configure.in: Don't use -static on AIX4.1.
+	* mdemo/Makefile.am: Likewise.
+
 2000-09-03  Alexandre Oliva  <aoliva@redhat.com>
 
 	* ltconfig.in: Get rid of hardcode_into_libs=all; use
