--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-09-04  Alexandre Oliva  <aoliva@redhat.com>
 
+	* ltmain.in (compile, need_lock): Don't create nor remove lock
+	files in dry runs.
+	
 	* ltmain.in (link -static): Don't add $link_static_flag; only
 	-all-static should do that.
 	* mdemo/configure.in: Revert the previous delta.
