--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-09-04  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tests/*.test (CONFIG_SITE): Ultrix's /bin/sh fails on
+	`. /dev/null'.  Set CONFIG_SITE to /dev/null/config/site, to make
+	sure we pick a non-existent file.
+
 	* ltcf-c.sh, ltcf-gcj.sh (hardcode_libdir_flag_spec,
 	export_dynamic_flag_spec): Use ${wl}, not ${wlarc}.
 
