--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2000-09-05  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltconfig.in: Removed all references to what used to be
+	hardcode_into_libs=all.  2000-09-03's patch was wrong.
+	* ltmain.in: Likewise.
+	* tests/build-relink.test, tests/build-relink2.test: Adjust.
+	* mdemo/Makefile.am (lib_LTLIBRARIES): Move libsub.la before
+	libfoo2.la, so that they're installed in the right order.
+
 2000-09-04  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tests/dryrun.test: Build libsub.la along with the object files,
