--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 In the near future:
 ********************
 
+* Port the migration of all code from ltconfig into libtool.m4 to the
+multi-language-branch, so that CVS automake can remove its references
+to ltconfig.
+
 * Check whether the version of libtool.m4 is compatible with
 ltconfig/ltmain.sh.  Meanwhile, the recommended approach for
 developers using automake is to insert libtool.m4 in acinclude.m4.
