--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-07  Pavel Roskin  <proskin@gnu.org>
+
+	* libtool.m4 (_LT_AC_LTCONFIG_HACK):  Fixed incorrect use of
+	changequote
+
 2000-09-07  Gary V. Vaughan  <gvv@techie.com>
 
 	* NEWS:  Updated.
