libtool.m4 (_LT_AC_LTCONFIG_HACK): Oh man!  Third time lucky. I just discovered that '&' needs to be escaped inside AC_TRY_EVAL.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
-2000-09-12  Michael Matz <matz@ifh.de>
+2000-09-13  Gary V. Vaughan  <gvv@techie.com>
+
+	libtool.m4 (_LT_AC_LTCONFIG_HACK): Oh man!  Third time lucky.
+	I just discovered that '&' needs to be escaped inside
+	AC_TRY_EVAL.
+
+2000-09-12  Michael Matz  <matz@ifh.de>
 
 	* ltmain.in:  Be careful about filenames with multiple `.'s in
 	them when calculating file extensions.
 	Reported by Joel Reed <jreed@support.ddiworld.com>
 
-2000-09-12  Gary V. Vaughan <gvv@techie.com>
+2000-09-12  Gary V. Vaughan  <gvv@techie.com>
 
 	libtool.m4 (AC_PROG_LIBTOOL):  Removed, as it was triggering a
 	bug in Autoconf-2.13 AC_REQUIRE implementation which inserted
