--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-14  Gary V. Vaughan  <gvv@techie.com>
+
+	* Makefile.am (EXTRA_DIST):  The bootstrap script should be
+	distributed with libtool.
+	
 2000-09-13  Gary V. Vaughan  <gvv@techie.com>
 
 	libtool.m4 (_LT_AC_LTCONFIG_HACK): Oh man!  Third time lucky.
