From Paul Sokolovsky <Paul.Sokolovsky@technologist.com> * libtool.m4 (pw32): Initial support for pw32, assuming that libtool's behaviour in this environment is identical to under cygwin. * ltmain.in (pw32): ditto. * NEWS: Updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2000-09-14  Gary V. Vaughan  <gvv@techie.com>
 
+	From Paul Sokolovsky <Paul.Sokolovsky@technologist.com>
+	* libtool.m4 (pw32): Initial support for pw32, assuming that
+	libtool's behaviour in this environment is identical to under
+	cygwin.
+	* ltmain.in (pw32): ditto.
+	* NEWS: Updated.
+	
 	* libtool.m4 (changequote): An audit of changequote and m4
 	quote usage -- all changequotes (except a few with non-nesting
 	square brackets) have been removed.
