--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ New in 1.3d: 2000-??-??; CVS version 1.3c, Libtool team:
 * Improved support for mingw32, Compaq Tru64 V5.0 and Digital Unix V4.*.
 * Initial support for ia64 linux.
 * Initial support for a.out freebsd shared libs.
+* Initial support for Paul Sokolovsky's pw32 POSIX over win32 layer.
 * Many bugfixes (especially in libltdl)
 
 New in 1.3.5: 2000-05-27, CVS version 1.3.4a, Libtool team:
