--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-15  Gary V. Vaughan  <gvv@techie.com>
+
+	* ltmain.in (version_type): Use "-iface" as the windows
+	versioning scheme, where iface is the number of the oldest
+	interface supported. 
+
 2000-09-14  Gary V. Vaughan  <gvv@techie.com>
 
 	From Paul Sokolovsky <Paul.Sokolovsky@technologist.com>
