--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-15  Nick Hudson  <nick@nthcliff.demon.co.uk>
+
+	* ltcf-cxx.sh (netbsd): Improved support.
+	* ltconfig.in (netbsd): ditto.
+
 2000-09-15  Gary V. Vaughan  <gvv@techie.com>
 
 	* ltmain.in (version_type): Use "-iface" as the windows
